# kudubot

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  build-external.py  config  docgen.sh  gitlab-ci.yml  publish-bindings.py  setup.py  unittest.sh  whatsapp-bot.py  yowsup-cli
bot/: continuousscript  layer.py  run.py
bot/deciders/: CommandDecider.py  ContainsDecider.py  Decision.py  EqualsDecider.py  GeneralDecider.py  RegexDecider.py  StartsWithDecider.py
bot/layers/: BotLayer.py  BotLayerWithGUI.py  layer.py
bot/parsers/: configparse.py  installparser.py
bot/plugins/: CommandHelper.py  FootballScores.py  GenericPlugin.py  PluginManager.py  PluginManagerGui.py  TheTVDB.py  Weather.py
bot/startup/: continuousscript
bot/utils/: CommandHelper.py  FootballScores.py  KinoZKM.py  Mensa.py  Reminder.py  TheTVDB.py  adressbook.py  calculations.py  emojicode.py  logwriter.py  randomizer.py  weather.py  worldTime.py
bot/yowsupwrapper/: WrappedYowInterfaceLayer.py
doc/: Makefile
doc/hand_crafted/: extending_guide.md
doc/source/: conf.py  index.rst  modules.rst
doc/sphinx/: Makefile
kudubot/: Bot.py  __init__.py  exceptions.py  helper.py  main.py  metadata.py
kudubot/config/: GlobalConfigHandler.py  builder.py  (+3 more)
kudubot/services/bindings/rust/: Cargo.toml  README.md
kudubot/services/bindings/rust/src/: backup.rs  files.rs  lib.rs  structs.rs
messengerbot/: main.py  metadata.py
resources/: sudoers-entries
systemd-services/: kudubot-telegram.service  kudubot-whatsapp.service
whatsbot/: YowsupEchoStack.py  main.py
(+360 files in other folders)
