[package]
name = "kudubot-bindings"
version = "0.18.2"
authors = ["Hermann Krumrey <hermann@krumreyh.com>"]
description = "Rust Bindings for the kudubot framework"
documentation = "https://progstats.namibsun.net/project.py?name=kudubot"
homepage = "https://gitlab.namibsun.net/namboy94/kudubot"
repository = "https://gitlab.namibsun.net/namboy94/kudubot"
readme = "README.md"
keywords = ["kudubot", "chat", "python", "framework"]
categories = ["development-tools", "text-processing", "database", "network-programming"]
license = "GPL-3.0"

[dependencies]
serde_json = "1.0"
serde = "1.0.1"
serde_derive = "1.0.1"
